# QuizGamePythonProject

./: README.md
QuizGame/src/: # main.py  data_quiz.json  lifebuoys.py  mainMenu.py  mode1.py  mode2.py  questions.py  quizData.py  utils.py
QuizGame/src/resources/: questionsBase.xlsx
QuizGamePoetry/: pyproject.toml
QuizGamePoetry/src/quizgamepoetry/: config.py  gameEngine.py  lifebuoys.py  mainMenu.py  mode1.py  mode2.py  questions.py  utils.py
QuizGamePoetry/src/quizgamepoetry/utils/: drawing.py  game_functions.py  hover_and_event_handling.py
