[tool.poetry]
name = "quizgamepoetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "quizgamepoetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
